tab overlap banner fix

--- a/src/components/_global/css/body/component.scss
+++ b/src/components/_global/css/body/component.scss
@@ -310,8 +310,8 @@ form {
            
     }
 
-    .qld__banner {
-        .qld__body {
+    + .qld__banner {
+        + .qld__body {
             &:first-of-type {
                 margin-top: 0
             }
